<resources>
    <string name="app_name">TheMovieDbApp</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_top_trending">Top Rated</string>
    <string name="lbl_popular_movies">Popular Movies</string>
    <string name="lbl_upcoming_movies">Upcoming Movies</string>
    <string name="lbl_now_playing">Now Playing</string>
    <string name="bab_home_menu">Home</string>
    <string name="bab_search_menu">Search</string>
    <string name="bab_coming_soon">Coming Soon</string>
    <string name="bab_download">Download</string>
    <string name="bab_more">More</string>
    <string name="lbl_time">2019 18+ 1h 3m</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text</string>
    <string name="lbl_my_list">My List</string>
    <string name="lbl_more_like_this">More Like This</string>
    <string name="lbl_movie_search"><![CDATA[Movies & TV]]></string>
</resources>
